Inital Commit - YAY!
Time to build something awesome !

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,14 +3,62 @@ title: LivePage for Google Chrome
 ---
 
 <header class="hero">
-  <img class="logo" />
-  <h1><strong>LivePage</strong> for Google Chrome</h1>
-  <h2>Because time is money</h2>
+  <div class="container">
+    <h1><strong>LivePage</strong> for Google Chrome
+      <small>Because time is money</small></h1>
 
-  <a href="https://chrome.google.com/webstore/detail/livepage/pilnojpmdoofaelbinaeodfpjheijkbh/details" class="btn">
-    + Add To Chrome
-  </a>
+    <a href="https://chrome.google.com/webstore/detail/livepage/pilnojpmdoofaelbinaeodfpjheijkbh/details" class="btn" onclick="chrome.webstore.install(); return false;" target="_blank">
+      + Add To Chrome
+    </a>
+  </div>
 </header>
 
-<section>
-</section>
+<div class="container">
+
+  <div class="key-features">
+
+    <div class="key-features__feature">
+      <i class="fa fa-globe" aria-hidden="true"></i>
+      <p>Make entire domains live with the push of a button</p>
+    </div>
+
+    <div class="key-features__feature">
+      <i class="fa fa-folder-open" aria-hidden="true"></i>
+      <p>See local changes to your webpages - instantly!</p>
+    </div>
+
+    <div class="key-features__feature">
+      <i class="fa fa-line-chart" aria-hidden="true"></i>
+      <p>Easy to setup, allowing your to focus on building</p>
+    </div>
+
+  </div>
+
+  <div class="demos">
+    <p><em>[Maybe 3 short videos showing how LivePage can be used?]</em></p>
+  </div>
+
+  <div class="faqs">
+    <h2>Frequently asked questions</h2>
+
+    <div>
+      <h3>Why is it not free?</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus erat libero, facilisis vel arcu at, suscipit lobortis leo. In blandit, eros viverra mattis dapibus, arcu nulla maximus nisi, quis feugiat lectus leo vel elit.</p>
+    </div>
+
+    <hr />
+
+    <div>
+      <h3>How I have a problem, where do I report it to?</h3>
+      <p>Duis vulputate fringilla enim, vitae pulvinar massa elementum consequat. Quisque aliquet magna id fermentum porta. Sed gravida, libero et eleifend imperdiet, magna nibh accumsan nunc, eget interdum lacus massa nec tellus.</p>
+    </div>
+
+    <hr />
+
+    <div>
+      <h3>I only see "Price not available" in the Chrome Web Store</h3>
+      <p>If you are seeing "Price not available" as the only download option in Chrome Web Store, this is caused by Google not being able to determine your local currency. As a workaround, append &gl=us to the URL, for example: <a href="https://chrome.google.com/webstore/detail/livepage/pilnojpmdoofaelbinaeodfpjheijkbh?hl=en&gl=us">https://chrome.google.com/webstore/detail/livepage/pilnojpmdoofaelbinaeodfpjheijkbh?hl=en&gl=us</a></p>
+    </div>
+  </div>
+
+</div>
