--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -3,15 +3,17 @@
   <head>
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta charset="utf-8">
-    <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
 
     <!-- Use title if it's in the page YAML frontmatter -->
     <title><%= current_page.data.title || "Middleman" %></title>
 
     <link href='//fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
 
     <%= stylesheet_link_tag :site %>
     <%= javascript_include_tag :all %>
+
+    <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/pilnojpmdoofaelbinaeodfpjheijkbh">
   </head>
 
   <body class="<%= page_classes %>">
