--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1,18 +1,11 @@
 @charset "utf-8";
-@import "normalize";
 
-body {
-  background: #ECC561;
-  text-align: center;
-  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 1em;
-}
+@import "structure/normalize";
+@import "structure/variables";
+@import "structure/typography";
+@import "structure/container";
 
-.logo img {
-  height: 18.75em;
-  margin-top: 6em;
-}
-
-h1 {
-  color: rgba(0,0,0,0.5);
-}
+@import "components/buttons";
+@import "components/hero";
+@import "components/key-features";
+@import "components/faqs";
