--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,7 +7,7 @@ title: LivePage for Google Chrome
     <h1><strong>LivePage</strong> for Google Chrome
       <small>Because time is money</small></h1>
 
-    <a href="https://chrome.google.com/webstore/detail/livepage/pilnojpmdoofaelbinaeodfpjheijkbh/details" class="btn" onclick="chrome.webstore.install(); return false;" target="_blank">
+    <a href="https://chrome.google.com/webstore/detail/livepage/pilnojpmdoofaelbinaeodfpjheijkbh/details" class="btn btn-primary" onclick="chrome.webstore.install(); return false;" target="_blank">
       + Add To Chrome
     </a>
   </div>
@@ -60,5 +60,7 @@ title: LivePage for Google Chrome
       <p>If you are seeing "Price not available" as the only download option in Chrome Web Store, this is caused by Google not being able to determine your local currency. As a workaround, append &gl=us to the URL, for example: <a href="https://chrome.google.com/webstore/detail/livepage/pilnojpmdoofaelbinaeodfpjheijkbh?hl=en&gl=us">https://chrome.google.com/webstore/detail/livepage/pilnojpmdoofaelbinaeodfpjheijkbh?hl=en&gl=us</a></p>
     </div>
   </div>
+
+  <a href="#" class="btn btn-primary-inv">hi</a>
 
 </div>
