--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1,5 +1,6 @@
 @charset "utf-8";
 
+@import "mixins";
 @import "structure/normalize";
 @import "structure/variables";
 @import "structure/typography";
