--- a/source/stylesheets/structure/_container.scss
+++ b/source/stylesheets/structure/_container.scss
@@ -1,6 +1,8 @@
 .container {
   padding: 0 1rem;
-  width: 100%;
   max-width: 820px;
   margin: 0 auto;
+  word-wrap: break-word;
+  // Causes right-margin issue in mobile view
+  // width: 100%;
 }
