--- a/source/stylesheets/components/_key-features.scss
+++ b/source/stylesheets/components/_key-features.scss
@@ -1,6 +1,6 @@
 .key-features {
   overflow: hidden;
-  display: flex; 
+  display: flex;
   flex-wrap: wrap;
   margin-top: 4rem;
 }
@@ -8,7 +8,7 @@
 .key-features__feature {
   text-align: center;
   margin-bottom: 3rem;
-  font-size: $baseFontSize * 0.8;
+  @include scaleFont($baseFontSize);
 
   flex: 0 0 100%;
 
