--- a/source/stylesheets/structure/_container.scss
+++ b/source/stylesheets/structure/_container.scss
@@ -4,7 +4,7 @@
   word-wrap: break-word;
   max-width: 1300px;
 
-  @media (max-width: 1400px){
+  @media (max-width: $screen-lg){
     max-width: 920px;
   }
 }
