--- a/source/stylesheets/components/_buttons.scss
+++ b/source/stylesheets/components/_buttons.scss
@@ -1,5 +1,5 @@
 .btn {
-  @include transition(all .3s ease);
+  transition: background-color .2s ease, border-color .2s ease, color .2s ease;
 
   border: 1px solid #fff;
   padding: 0.6rem 1rem 0.7rem 1rem;
@@ -11,7 +11,6 @@
   &:hover, &:focus {}
 }
 
-// TODO: resolve need for !important
 .btn-primary{
   background-color: $brandPrimary;
   border-color: #fff;
@@ -23,13 +22,13 @@
   }
 }
 
-.btn-primary-inv{
-  color: $brandPrimary !important;
+.btn-primary-inv {
+  color: $brandPrimary;
   border-color: $brandPrimary;
 
   &:hover, &:focus{
-    background-color: $brandPrimary !important;
-    color: #fff !important;
+    background-color: $brandPrimary;
+    color: #fff;
     border-color: #fff;
   }
 }
