Adding in logo to index

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -5,7 +5,7 @@ title: LivePage for Google Chrome
 <header class="hero">
   <div class="container">
 
-    <% livepage_install_link class: "" do %>
+    <% livepage_install_link class: "logo" do %>
       <%= image_tag 'icon.svg' %>
     <% end %>
 
