--- a/source/stylesheets/components/_hero.scss
+++ b/source/stylesheets/components/_hero.scss
@@ -7,10 +7,16 @@
   overflow: hidden;
 }
 
+.logo {
+  overflow: hidden;
+  display: inline-block;
+  margin-bottom: 1rem;
+}
+
 h1 {
   margin-top: 0;
   font-weight: 300;
-  margin-bottom: 3rem;
+  margin-bottom: 2rem;
   color: $heroFontColour;
 
   small {
