Aiming for mobile first view
So media queries go:

Default Size
Mid range ( min-width 920px )
Large screen ( min-width 1200px )

Also making min font size 16px accross the board. I might move these
back to REM.

--- a/source/stylesheets/structure/_typography.scss
+++ b/source/stylesheets/structure/_typography.scss
@@ -1,5 +1,5 @@
 body {
-  @include scaleFont(18px);
+  @include scaleFont($baseFontSize);
   background: $bgColour;
   color: $fontColour;
   font-weight: 200;
