--- a/source/stylesheets/mixins/_scale-font.scss
+++ b/source/stylesheets/mixins/_scale-font.scss
@@ -1,8 +1,8 @@
 @mixin scaleFont($fontSize) {
   font-size: $fontSize;
 
-  @media (max-width: $screen-md){
-    font-size: $fontSize * $smallScale;
+  @media (min-width: $screen-md){
+    font-size: $fontSize * $midScale;
   }
 
   @media (min-width: $screen-lg) {
