--- a/source/stylesheets/structure/_container.scss
+++ b/source/stylesheets/structure/_container.scss
@@ -1,10 +1,10 @@
 .container {
-  padding: 0 1rem;
+  padding: 0 2rem;
   margin: 0 auto;
   word-wrap: break-word;
-  max-width: 1300px;
+  max-width: 920px;
 
-  @media (max-width: $screen-lg){
-    max-width: 920px;
+  @media (min-width: $screen-lg){
+    max-width: 1200px;
   }
 }
