--- a/source/stylesheets/structure/_variables.scss
+++ b/source/stylesheets/structure/_variables.scss
@@ -5,7 +5,7 @@ $brandTertiary: #ee6194;
 
 $bgColour: #fff;
 $fontColour: #262626;
-$baseFontSize: 1em;
+$baseFontSize: 16px;
 $headerFontSize: 1.7em 1.5em 1.3em 1em;
 $heroBgColour: $brandPrimary;
 $heroFontColour: #fff;
@@ -14,8 +14,8 @@ $headingColor: $heroBgColour;
 
 // Breakpoints
 $screen-md: 768px;
-$screen-lg: 1500px;
+$screen-lg: 1200px;
 
 // Font scaling
-$smallScale: 0.8;
-$largeScale:1.2;
+$midScale: 1;
+$largeScale: 1.1;
