--- a/source/stylesheets/components/_key-features.scss
+++ b/source/stylesheets/components/_key-features.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-wrap: wrap;
   margin-top: 4rem;
+  justify-content: space-around;
 }
 
 .key-features__feature {
@@ -14,6 +15,7 @@
 
   @media (min-width: $screen-md) {
     flex: 0 0 33.3%;
+    max-width: 250px;
   }
 
   .fa {
