Removing font scaling in favor of Rem
REM scales relative to the base font size, way nicer :)

--- a/source/partials/index/_faqs.html.erb
+++ b/source/partials/index/_faqs.html.erb
@@ -3,20 +3,20 @@
 
   <div>
     <h3>Why is it not free?</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus erat libero, facilisis vel arcu at, suscipit lobortis leo. In blandit, eros viverra mattis dapibus, arcu nulla maximus nisi, quis feugiat lectus leo vel elit.</p>
+    <p>LivePage started as a small side project that has grown to have on average 32,500 weekly active users. As it has grown, providing support and keeping up development has taken up a fair amount of time. By charging a small fee, I'm able to dedicate a few hours a week to LivePage without a problem.</p>
   </div>
 
   <hr />
 
   <div>
     <h3>How I have a problem, where do I report it to?</h3>
-    <p>Duis vulputate fringilla enim, vitae pulvinar massa elementum consequat. Quisque aliquet magna id fermentum porta. Sed gravida, libero et eleifend imperdiet, magna nibh accumsan nunc, eget interdum lacus massa nec tellus.</p>
+    <p>Depending on your issue, either send me an <%= link_to "email", "mailto:me@mikerogers.io" %>, or open an issue on <%= link_to "GitHub", "https://github.com/MikeRogers0/LivePage", target: "_blank" %>.</p>
   </div>
 
   <hr />
 
   <div>
     <h3>I only see "Price not available" in the Chrome Web Store</h3>
-    <p>If you are seeing "Price not available" as the only download option in Chrome Web Store, this is caused by Google not being able to determine your local currency. As a workaround, append &gl=us to the URL, for example: <a href="https://chrome.google.com/webstore/detail/livepage/pilnojpmdoofaelbinaeodfpjheijkbh?hl=en&gl=us">https://chrome.google.com/webstore/detail/livepage/pilnojpmdoofaelbinaeodfpjheijkbh?hl=en&gl=us</a></p>
+    <p>If you are seeing "Price not available" as the only download option in Chrome Web Store, this is caused by Google not being able to determine your local currency. As a workaround, append <code>&amp;gl=us</code> to the URL, for example: <a href="https://chrome.google.com/webstore/detail/livepage/pilnojpmdoofaelbinaeodfpjheijkbh?hl=en&gl=us">https://chrome.google.com/webstore/detail/livepage/pilnojpmdoofaelbinaeodfpjheijkbh?hl=en<strong>&gl=us</strong></a></p>
   </div>
 </div>
