--- a/source/partials/index/_footer-install.html.erb
+++ b/source/partials/index/_footer-install.html.erb
@@ -2,4 +2,5 @@
   <% livepage_install_link class: "btn btn-primary-inv" do %>
     + Add To Chrome
   <% end %>
+  <%= link_to "Contribute on GitHub", "https://github.com/MikeRogers0/LivePage", class: "btn btn-primary-inv", target: "_blank" %>
 </div>
