--- a/source/stylesheets/structure/_typography.scss
+++ b/source/stylesheets/structure/_typography.scss
@@ -1,31 +1,23 @@
 body {
-  @include scaleFont($baseFontSize);
+  font-size: $baseFontSize;
   background: $bgColour;
   color: $fontColour;
   font-weight: 200;
   font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
   padding-bottom: 2rem;
+
+  @media (min-width: $screen-md){
+    font-size: $baseFontSize * $midScale;
+  }
+
+  @media (min-width: $screen-lg) {
+    font-size: $baseFontSize * $largeScale;
+  }
 }
 
 h1, h2, h3, h4 {
   color: $headingColor;
   font-weight: 300;
-}
-
-h1 {
-  @include scaleFont(nth($headerFontSize, 1));
-}
-
-h2 {
-  @include scaleFont(nth($headerFontSize, 2));
-}
-
-h3 {
-  @include scaleFont(nth($headerFontSize, 3));
-}
-
-h4 {
-  @include scaleFont(nth($headerFontSize, 4));
 }
 
 hr {
