--- a/source/stylesheets/structure/_container.scss
+++ b/source/stylesheets/structure/_container.scss
@@ -4,7 +4,7 @@
   word-wrap: break-word;
   max-width: 920px;
 
-  @media (min-width: $screen-lg){
-    max-width: 1200px;
-  }
+  /*@media (min-width: $screen-lg){*/
+    /*max-width: 1200px;*/
+  /*}*/
 }
