Fixing up spelling mistake and adding padding to footer buttons

--- a/source/partials/index/_footer-install.html.erb
+++ b/source/partials/index/_footer-install.html.erb
@@ -1,6 +1,6 @@
 <div class="footer-install">
-  <% livepage_install_link class: "btn btn-primary-inv" do %>
+  <% livepage_install_link class: "btn btn-inversed" do %>
     + Add To Chrome
   <% end %>
-  <%= link_to "Contribute on GitHub", "https://github.com/MikeRogers0/LivePage", class: "btn btn-primary-inv", target: "_blank" %>
+  <%= link_to "Contribute on GitHub", "https://github.com/MikeRogers0/LivePage", class: "btn btn-inversed", target: "_blank" %>
 </div>
