--- a/source/partials/index/_key-features.html.erb
+++ b/source/partials/index/_key-features.html.erb
@@ -12,7 +12,7 @@
 
   <div class="key-features__feature">
     <i class="fa fa-line-chart" aria-hidden="true"></i>
-    <p>Easy to setup, allowing your to focus on building</p>
+    <p>Easy to setup, allowing you to focus on building</p>
   </div>
 
 </div>
