--- a/source/stylesheets/components/_buttons.scss
+++ b/source/stylesheets/components/_buttons.scss
@@ -11,7 +11,7 @@
   &:hover, &:focus {}
 }
 
-.btn-primary{
+.btn-primary {
   background-color: $brandPrimary;
   border-color: #fff;
   color: #fff;
@@ -22,7 +22,7 @@
   }
 }
 
-.btn-primary-inv {
+.btn-inversed {
   color: $brandPrimary;
   border-color: $brandPrimary;
 
