--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -15,6 +15,8 @@
     <%= javascript_include_tag :all %>
 
     <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/pilnojpmdoofaelbinaeodfpjheijkbh">
+    <link rel="shortcut icon" href="favicon.png" />
+    <link rel="icon" type="image/ico" href="favicon.ico" />
   </head>
 
   <body class="<%= page_classes %>">
