--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -13,6 +13,7 @@
 
     <%= stylesheet_link_tag :site %>
     <%= javascript_include_tag :all %>
+    <%= javascript_include_tag "jquery-3.1.0.min" %>
 
     <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/pilnojpmdoofaelbinaeodfpjheijkbh">
     <link rel="shortcut icon" href="favicon.png" />
