Adding video demo in

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -22,7 +22,7 @@ title: LivePage for Google Chrome
 
   <%= partial "partials/index/key-features" %>
 
-  <%#= partial "partials/index/demos" %>
+  <%= partial "partials/index/demos" %>
 
   <%= partial "partials/index/faqs" %>
 
