--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -8,5 +8,6 @@
 @import "components/buttons";
 @import "components/hero";
 @import "components/key-features";
+@import "components/demos";
 @import "components/faqs";
 @import "components/footer-install";
