--- a/source/partials/index/_demos.html.erb
+++ b/source/partials/index/_demos.html.erb
@@ -1,3 +1,3 @@
 <div class="demos">
-  <p><em>[Maybe 3 short videos showing how LivePage can be used?]</em></p>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/lAn18oMfYmQ?rel=0" frameborder="0" allowfullscreen></iframe>
 </div>
