--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,6 +2,32 @@
 title: LivePage for Google Chrome
 ---
 
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org/",
+  "@type": "Product",
+  "name": "LivePage",
+  "image": "https://livepage.mikerogers.io<%= image_path 'icon.svg' %>",
+  "description": "LivePage reloads website resources such as CSS, HTML and JavaScript as they update on the server.",
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "4.54",
+    "reviewCount": "221"
+  },
+  "offers": {
+    "@type": "Offer",
+    "priceCurrency": "USD",
+    "price": "2.99",
+    "seller": {
+      "@type": "Organization",
+      "name": "Full On Dev"
+    }
+  }
+}
+</script>
+
+
+
 <header class="hero">
   <div class="container">
 
@@ -13,7 +39,7 @@ title: LivePage for Google Chrome
       <small>Because time is money</small></h1>
 
     <% livepage_install_link do %>
-      + Add To Chrome
+      Buy Today - $2.99
     <% end %>
   </div>
 </header>
