Adding copy around how to recieve a refund

--- a/source/partials/index/_faqs.html.erb
+++ b/source/partials/index/_faqs.html.erb
@@ -19,4 +19,11 @@
     <h3>I only see "Price not available" in the Chrome Web Store</h3>
     <p>If you are seeing "Price not available" as the only download option in Chrome Web Store, this is caused by Google not being able to determine your local currency. As a workaround, append <code>&amp;gl=us</code> to the URL, for example: <a href="https://chrome.google.com/webstore/detail/livepage/pilnojpmdoofaelbinaeodfpjheijkbh?hl=en&gl=us">https://chrome.google.com/webstore/detail/livepage/pilnojpmdoofaelbinaeodfpjheijkbh?hl=en<strong>&gl=us</strong></a></p>
   </div>
+
+  <hr />
+
+  <div>
+    <h3>LivePage wasn't for me, I'd like a refund.</h3>
+    <p>No problem! All orders are handled via the Chrome Store, after you purchased you should have received a confirmation email containing an Order number. Send me an <%= link_to "email with your order number", "mailto:me@mikerogers.io" %> and I'll issue a refund ASAP.</p>
+  </div>
 </div>
