--- a/source/stylesheets/structure/_variables.scss
+++ b/source/stylesheets/structure/_variables.scss
@@ -1,5 +1,5 @@
 // Colours
-$brandPrimary: #6BABC0;
+$brandPrimary: #3d7f94;
 $brandSecondary: darken($brandPrimary, 10%);
 $brandTertiary: #ee6194;
 
