Fixing up formatting

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -20,23 +20,22 @@ title: LivePage for Google Chrome
     "price": "3.99",
     "seller": {
       "@type": "Organization",
-      "name": "Full On Dev"
+      "name": "Full On Development"
     }
   }
 }
 </script>
 
-
-
 <header class="hero">
   <div class="container">
-
     <% livepage_install_link class: "logo" do %>
       <%= image_tag 'icon.svg' %>
     <% end %>
 
-    <h1><strong>LivePage</strong> for Google Chrome
-      <small>Because time is money</small></h1>
+    <h1>
+      <strong>LivePage</strong> for Google Chrome
+      <small>Because time is money</small>
+    </h1>
 
     <% livepage_install_link do %>
       Buy Today - $3.99
