--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -8,6 +8,9 @@
     <!-- Use title if it's in the page YAML frontmatter -->
     <title><%= current_page.data.title || "Middleman" %></title>
 
+    <link rel="preload" href="<%= asset_path(:css, 'site') %>" as="style" />
+    <link rel="preload" href="<%= asset_path(:js, 'all') %>" as="script" />
+
     <link href='//fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
 
