Adding in canonical URL

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -19,6 +19,7 @@
     <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/pilnojpmdoofaelbinaeodfpjheijkbh">
     <link rel="shortcut icon" href="favicon.png" />
     <link rel="icon" type="image/ico" href="favicon.ico" />
+    <link rel="canonical" href="<%= current_url %>"/>
   </head>
 
   <body class="<%= page_classes %>">
