Adding @levelsio style maker link

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -25,6 +25,7 @@
   <body class="<%= page_classes %>">
     <%= yield %>
 
+    <%= partial 'partials/levelsio_by' %>
     <%= javascript_include_tag :all, defer: true %>
   </body>
 </html>
