Converting the Levelsio css back to nested SCSS

--- a/source/stylesheets/components/_levelsio-by.scss
+++ b/source/stylesheets/components/_levelsio-by.scss
@@ -2,7 +2,6 @@
  * Grabbed from: https://gist.github.com/levelsio/9c531122e557da6282458bbc2a8e2aff
  * As mentioned https://twitter.com/levelsio/status/985879093135589376
  */
-/* line 5, app/assets/stylesheets/components/_levelsio-by.scss */
 .levelsio-by {
   display: flex;
   position: fixed;
@@ -17,29 +16,25 @@
   color: #212529;
   text-decoration: none;
   line-height: 110%;
-}
 
-/* line 23, app/assets/stylesheets/components/_levelsio-by.scss */
-.levelsio-by:hover {
-  color: #212529;
-  text-decoration: none;
-}
+  &:hover {
+    color: #212529;
+    text-decoration: none;
 
-/* line 27, app/assets/stylesheets/components/_levelsio-by.scss */
-.levelsio-by:hover .maker {
-  color: #3d7f94;
-}
+    .maker {
+      color: #3d7f94;
+    }
+  }
 
-/* line 31, app/assets/stylesheets/components/_levelsio-by.scss */
-.levelsio-by img {
-  border-radius: 100%;
-  width: 1.25rem;
-  height: 1.25rem;
-  margin-right: 0.5625rem;
-  margin-left: 0.5625rem;
-}
+  img {
+    border-radius: 100%;
+    width: 1.25rem;
+    height: 1.25rem;
+    margin-right: 0.5625rem;
+    margin-left: 0.5625rem;
+  }
 
-/* line 38, app/assets/stylesheets/components/_levelsio-by.scss */
-.levelsio-by span {
-  font-size: 0.875rem;
+  span {
+    font-size: 0.875rem;
+  }
 }
