Updating copy so it's 'fork on GitHub' over pay me money

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -38,7 +38,7 @@ title: LivePage for Google Chrome
     </h1>
 
     <% livepage_install_link do %>
-      Buy Today - $3.99
+      Fork on GitHub
     <% end %>
   </div>
 </header>
