--- a/source/partials/index/_faqs.html.erb
+++ b/source/partials/index/_faqs.html.erb
@@ -2,28 +2,14 @@
   <h2>Frequently asked questions</h2>
 
   <div>
-    <h3>Why is it not free?</h3>
-    <p>LivePage started as a small side project that has grown to have on average 32,500 weekly active users. As it has grown, providing support and keeping up development has taken up a fair amount of time. By charging a small fee, I'm able to dedicate a few hours a week to LivePage without a problem.</p>
+    <h3>Is LivePage still maintained?</h3>
+    <p>As of the 10th of February 2020 is not actively maintained. You can still find the source code on GitHub if you'd like to use it.</p>
   </div>
 
   <hr />
 
   <div>
-    <h3>How I have a problem, where do I report it to?</h3>
-    <p>Depending on your issue, either send me an <%= link_to "email", "mailto:me@mikerogers.io" %>, or open an issue on <%= link_to "GitHub", "https://github.com/MikeRogers0/LivePage", target: "_blank" %>.</p>
-  </div>
-
-  <hr />
-
-  <div>
-    <h3>I only see "Price not available" in the Chrome Web Store</h3>
-    <p>If you are seeing "Price not available" as the only download option in Chrome Web Store, this is caused by Google not being able to determine your local currency. As a workaround, append <code>&amp;gl=us</code> to the URL, for example: <a href="https://chrome.google.com/webstore/detail/livepage/pilnojpmdoofaelbinaeodfpjheijkbh?hl=en&gl=us">https://chrome.google.com/webstore/detail/livepage/pilnojpmdoofaelbinaeodfpjheijkbh?hl=en<strong>&gl=us</strong></a></p>
-  </div>
-
-  <hr />
-
-  <div>
-    <h3>LivePage wasn't for me, I'd like a refund.</h3>
-    <p>No problem! All orders are handled via the Chrome Store, after you purchased you should have received a confirmation email containing an Order number. Send me an <%= link_to "email with your order number", "mailto:me@mikerogers.io" %> and I'll issue a refund ASAP.</p>
+    <h3>I purchased LivePage within the last 6 months & I'd like a refund.</h3>
+    <p>No problem! All orders were handled via the Chrome Store, after you purchased you should have received a confirmation email containing an Order number. Send me an <%= link_to "email with your order number", "mailto:me@mikerogers.io" %> and I'll issue a refund.</p>
   </div>
 </div>
